--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Main Content (Hidden Initially) -->
     <div id="mainContent" class="container" style="display: none;">
-        <h1>Thư ơi anh có điều muốn nói. Bấm yes nha =))</h1>
+        <h1>Thư ơi anh có điều muốn nói. Bé bấm yes nha :3</h1>
         <img src="./images/crystal-amaru.gif" alt="Motivational GIF" class="motivational-gif">
         <img src="./images/bubu-dudu-bubu-dudu-love.gif" alt="Motivational GIF" class="motivational-gif">
         <div class="button-container">
